@@ -34,6 +34,8 @@ fetchmail 6.3.2 (to be released):
   Patch by Sunil Shetye. (MA)
 * Don't complain about fetchall keep in --dumpconfig mode. Bug introduced in
   6.3.0.  Matthias Andree.
+* fetchmailconf.py: Fix novice help for Poll interval and fetchall.
+  Reported by Justin Pryzby, Debian Bug #344978.  Matthias Andree
 
 fetchmail 6.3.1 (released 2005-12-19):
 
